# itp_tldr

./: Cargo.toml  LICENSE  README.md
binaries/macos/: itp_tldr
src/: database.rs  domain_renderer.rs  gui.rs  main.rs
