[package]
name = "itp_tldr"
version = "0.1.0"
authors = ["Bernardo de Araujo <bernardo.amc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rusqlite = "^0.24"
crossterm = { version = "0.19" }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
structopt = "0.3.19"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
